# langchain_learning

./: .env.example  .env.middleware.example  .gitignore  AGENT_README.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LOGGING_CONFIGURATION.md  LOGGING_MIDDLEWARE_README.md  LangChain_架构详解.md  NATIONAL_COVERAGE_COMPLETION_REPORT.md  PROJECT_STATUS.md  README.md  WEATHER_API_TEST_REPORT.md  add_heqiao_town.py  add_major_cities.py  add_specific_towns.py  city_coordinate_db.py  create_admin_db.py  demo_enhanced_fishing_scorer.py  demo_new_tools_agent.py  enhanced_place_matcher.py  enhanced_weather_service.py  modern_langchain_agent.py  national_integration_report.json  place_name_matcher.py  pyproject.toml  run_sync_weather_tools.py  test_agent_structure.py  test_direct_router.py  test_enhanced_logging.py  test_fishing_complete.py  test_fishing_fix.py  test_fishing_success.py  test_intelligent_routing.py  test_national_coverage.py  test_new_architecture.py  verify_national_integration.py  weather_cache.py  weather_service.py  (+3 more)
agents/: __init__.py
config/: README.md  __init__.py  service_config.py
core/: __init__.py  base_agent.py  base_service.py  base_tool.py  interfaces.py  registry.py
data/: admin_divisions.db  coordinate_enrichment.py  coordinates_cache.db  national_region_database.py  town_coordinates.db  town_coordinates_export.json  towns_export.json
docs/: AGENT_README.md  API.md  CACHE_OPTIMIZATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION_GUIDE.md  COORDINATE_FIX_REPORT.md  FISHING_WEIGHT_ALGORITHMS_GUIDE.md  INTELLIGENT_FISHING_ECOSYSTEM_ARCHITECTURE.md  (+7 more)
(+146 files in other folders)
